syntax = "proto3";

package tokenHolderImpl;

import "acs1.proto";
import "token_holder_contract.proto";

option csharp_namespace = "AElf.Contracts.TokenHolder";

service TokenHolderContract {
    
    option (aelf.csharp_state) = "AElf.Contracts.TokenHolder.TokenHolderContractState";
    option (aelf.base) = "acs1.proto";
    option (aelf.base) = "token_holder_contract.proto";
    
}